@@ -568,12 +568,6 @@ hcat.bin=/usr/local/hcat/bin/hcat
 #
 # opt.fetch=true
 
-# Enable auto/grace parallelism in tez. These should be used by default unless
-# you encounter some bug in automatic parallelism. If pig.tez.auto.parallelism
-# to false, use 1 as default parallelism
-pig.tez.auto.parallelism=true
-pig.tez.grace.parallelism=true
-
 ###########################################################################
 #
 # Streaming properties
@@ -600,3 +594,23 @@ pig.tez.grace.parallelism=true
 # python2.7.
 #
 # pig.streaming.udf.python.command=python
+
+###########################################################################
+#
+# Tez specific properties
+#
+
+# Enable auto/grace parallelism in tez. Default is true and these should be 
+# used by default unless you encounter some bug in automatic parallelism.
+# If pig.tez.auto.parallelism is set to false, 1 is used as default parallelism
+
+#pig.tez.auto.parallelism=true
+#pig.tez.grace.parallelism=true
+
+# Union optimization (pig.tez.opt.union=true) in tez uses vertex groups to store
+# output from different vertices into one final output location.
+# If a StoreFunc's OutputCommitter does not work with multiple vertices
+# writing to same location, then you can disable union optimization just
+# for that StoreFunc. Refer PIG-4649
+
+#pig.tez.opt.union.unsupported.storefuncs=org.apache.hcatalog.pig.HCatStorer,org.apache.hive.hcatalog.pig.HCatStorer
